--- a/app/about.html
+++ b/app/about.html
@@ -364,12 +364,12 @@
           <div class="col-sm-12 mx-auto">
             <div class="strip text-center">
               <h1 class="c-bolder text-white strip__title">
-                Download Selcap App Today
+                Download SelVest App Today
               </h1>
               <p class="text-white">
                 Lorem ipsum dolor sit amet consectetur adipis
                 <br class="d-none d-sm-inline-block" />
-                selcapital & get referral bonus
+                SelVest & get referral bonus
               </p>
               <div
                 class="text-center shadow mx-auto d-inline-flex flex-column flex-md-row mt-2"
@@ -466,7 +466,7 @@
                 Close, Parkview Estate, Ikoyi, Lagos
               </li>
               <li>0700 002 2400</li>
-              <li>info@selcapitalpartners.com</li>
+              <li>info@SelVestpartners.com</li>
             </ul>
           </div>
         </div>
