--- a/app/index.html
+++ b/app/index.html
@@ -184,7 +184,7 @@
                 Intuitive features, powerful results
               </h2>
               <p class="c-lead-inline pt-3">
-                SelCapital is versatile enough to help anyone’s money
+                SelVest is versatile enough to help anyone’s money
                 <br class="d-none d-sm-block" />
                 make sense without much effort.
               </p>
@@ -246,7 +246,7 @@
                 <div class="pt-2">
                   <h5>Serious security</h5>
                   <p>
-                    SelCapital uses secure processes to protect your information
+                    SelVest uses secure processes to protect your information
                     and help prevent unauthorized use.
                   </p>
                 </div>
@@ -272,11 +272,9 @@
         <div class="row">
           <div class="col-12">
             <div class="text-center mx-auto">
-              <h2 class="c-title__bigger pb-md-0 text-center">
-                Why SelCapital
-              </h2>
+              <h2 class="c-title__bigger pb-md-0 text-center">Why SelVest</h2>
               <p class="c-lead-inline pt-3">
-                SelCapital is free for 30 days,
+                SelVest is free for 30 days,
                 <br class="d-none d-sm-block" />
                 make your savings count.
               </p>
@@ -294,9 +292,7 @@
                   <img src="assets/images/svg/sync.svg" alt="" />
                 </span>
                 <h6>Automated Savings</h6>
-                <p>
-                  You just need to set once, and watch Selcapital do the rest
-                </p>
+                <p>You just need to set once, and watch SelVest do the rest</p>
               </div>
               <div
                 class="feat bg-white text-center pl-4 pr-4 pb-2 position-relative"
@@ -342,7 +338,7 @@
                   <img src="assets/images/svg/shield.svg" alt="" />
                 </span>
                 <h6>Secured Transactions</h6>
-                <p>The fee is on us if SelCapital saves too much..</p>
+                <p>The fee is on us if SelVest saves too much..</p>
               </div>
             </div>
           </div>
@@ -413,17 +409,25 @@
                       <span
                         class="d-flex justify-content-start c-normal text-white"
                       >
-                        What is selcap savings?
+                        What is SelVest?
                       </span>
                       <span class="minus text-white"> − </span>
                       <span class="plus text-white"> + </span>
                     </div>
                     <div class="faq__content">
                       <p class="c-normal">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Alias et, cumque harum illum, veritatis odio
-                        aliquam voluptates iste atque, illo rerum? Aliquid vitae
-                        nihil incidunt odit a beatae, totam minima.
+                        SelVest is an app that helps you save and invest without
+                        having to think about it. SelVest can help you with the
+                        discipline needed to save money for the rainy days.
+                      </p>
+                      <p class="c-normal">
+                        You can choose to safelock a specific amount for a
+                        duration of time.
+                      </p>
+                      <p class="c-normal">
+                        We also make investment flexible &amp; stress free.
+                        Offering packages available from multiple profitable
+                        sectors.
                       </p>
                     </div>
                   </div>
@@ -432,17 +436,19 @@
                       <span
                         class="d-flex justify-content-start c-normal text-white"
                       >
-                        When do I earn referral bonus?
+                        How do I start saving on SelVest?
                       </span>
                       <span class="minus text-white"> − </span>
                       <span class="plus text-white"> + </span>
                     </div>
                     <div class="faq__content">
                       <p class="c-normal">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Alias et, cumque harum illum, veritatis odio
-                        aliquam voluptates iste atque, illo rerum? Aliquid vitae
-                        nihil incidunt odit a beatae, totam minima.
+                        Visit the website or download the app to create an
+                        account. Set up your withdrawal account details; this is
+                        the bank account that funds you withdraw will get sent
+                        to. Enter your debit card details to activate your
+                        account and then make your first deposit. You may now
+                        proceed to use any of the Savings Plans to get started
                       </p>
                     </div>
                   </div>
@@ -451,19 +457,21 @@
                       <span
                         class="d-flex justify-content-start c-normal text-white"
                       >
-                        At what cost will my transactions on selcapital savings
-                        be processed?
+                        How much do I need to start saving/Investing SelVest?
                       </span>
                       <span class="minus text-white"> − </span>
                       <span class="plus text-white"> + </span>
                     </div>
                     <div class="faq__content">
                       <p class="c-normal">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing
-                        elit. Deleniti fugit rem sit. Voluptatum placeat magni
-                        fuga saepe possimus quod exercitationem provident
-                        voluptate aspernatur perferendis. Quae, distinctio
-                        rerum. Ut, veritatis ipsam!
+                        Selvest is free to Join. <br />
+                        To add money to your account you can use any bank debit
+                        card,
+                        <br />
+
+                        For Savings: You can start saving with as low as
+                        &#8358;50. <br />
+                        For Investment: Depends on the offerings.
                       </p>
                     </div>
                   </div>
@@ -472,18 +480,17 @@
                       <span
                         class="d-flex justify-content-start c-normal text-white"
                       >
-                        How do I safelock my funds in my wallet?
+                        Are my card details safe?
                       </span>
                       <span class="minus text-white"> − </span>
                       <span class="plus text-white"> + </span>
                     </div>
                     <div class="faq__content">
                       <p class="c-normal">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Sint odio dolore ea quibusdam inventore quae
-                        reiciendis quia voluptatum dolorum. Quasi non omnis
-                        voluptatum tempore magnam aliquam explicabo commodi iste
-                        perspiciatis!
+                        Your security is our major priority, so we work with a
+                        PCIDSS-compliant payment processor, Paystack to handle
+                        your card details. Your card details are extremely safe
+                        and are warehoused where they can never be compromised.
                       </p>
                     </div>
                   </div>
@@ -492,17 +499,20 @@
                       <span
                         class="d-flex justify-content-start c-normal text-white"
                       >
-                        Lorem ipsum dolor sit, amet consectetur?
+                        Is my money on selvest secure?
                       </span>
                       <span class="minus text-white"> − </span>
                       <span class="plus text-white"> + </span>
                     </div>
                     <div class="faq__content">
                       <p class="c-normal">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Porro sapiente eaque est dolorem corporis iste
-                        laudantium, suscipit facere impedit non provident. Omnis
-                        hic vel provident doloribus aspernatur, quo illo sunt.
+                        The security of our users is of immense importance to
+                        us. We adopt bank level security measures in handling
+                        user’s information. SelVest supports the latest
+                        recommended secure cipher suites to encrypt all traffic
+                        in transit, including the use of TLS 1.2 protocols,
+                        AES256 encryption, and SHA2 signatures, whenever
+                        supported by the clients.
                       </p>
                     </div>
                   </div>
@@ -511,22 +521,41 @@
                       <span
                         class="d-flex justify-content-start c-normal text-white"
                       >
-                        How do I know my that data is secured?
+                        How do I make withdrawals?
                       </span>
                       <span class="minus text-white"> − </span>
                       <span class="plus text-white"> + </span>
                     </div>
                     <div class="faq__content">
                       <p class="c-normal">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing
-                        elit. Reiciendis ea modi nihil delectus labore corrupti
-                        accusantium, ad commodi obcaecati, accusamus quasi
-                        possimus id minima nisi, facilis nesciunt ab
-                        consequuntur? Maxime!Rerum quasi delectus quidem! Modi
-                        nulla perspiciatis architecto neque nostrum expedita
-                        totam aliquam earum explicabo beatae labore numquam,
-                        dolores doloribus ab deserunt accusamus molestiae
-                        sapiente illum mollitia suscipit. Architecto, labore.
+                        Withdrawals are done with ease in real time. Follow
+                        these procedures to make a withdrawal:
+                      </p>
+                      <ol class="faq__list">
+                        <li>
+                          <span class="pr-2">1.</span>Select a plan in to your
+                          Selvest account.
+                        </li>
+                        <li><span class="pr-2">2.</span>Select your plan</li>
+                        <li>
+                          <span class="pr-2">3.</span>Enter the amount you want
+                          to withdraw
+                        </li>
+                        <li>
+                          <span class="pr-2">4.</span>Select the withdrawal
+                          destination.
+                        </li>
+                        <li>
+                          <span class="pr-2">5.</span>Make your withdrawal.
+                          that's all
+                        </li>
+                      </ol>
+                      <p class="c-normal">
+                        If you have not added your bank details, tap “Banks &
+                        Cards”. Under “Banks” provide details of the preferred
+                        bank account to be credited and save. If withdrawal is
+                        not settled after six hours, do send us a message on any
+                        of our channels: Twitter, Instagram, Email or Live Chat.
                       </p>
                     </div>
                   </div>
@@ -587,10 +616,9 @@
                 class="testimonial__content text-center text-md-left mt-3 mt-md-0"
               >
                 <p class="testimonial__text c-normal px-1">
-                  &OpenCurlyDoubleQuote;Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Quis, porro pariatur repudiandae tenetur
-                  maxime quasi reiciendis ipsa asperiores, molestiae cum atque
-                  excepturi est beatae non&CloseCurlyDoubleQuote;.
+                  &OpenCurlyDoubleQuote;The options on “savings” that it gives
+                  you, help you save money without you even stressing! The
+                  easiest way to save hands down!&CloseCurlyDoubleQuote;.
                 </p>
 
                 <small class="testimonial__label"> Fadeyi Thompson </small>
@@ -604,10 +632,10 @@
               </div>
               <div class="testimonial__content">
                 <p class="testimonial__text c-normal px-1">
-                  &OpenCurlyDoubleQuote;Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Quis, porro pariatur repudiandae tenetur
-                  maxime quasi reiciendis ipsa asperiores, molestiae cum atque
-                  excepturi est beatae non&CloseCurlyDoubleQuote;.
+                  &OpenCurlyDoubleQuote;I am so bad at saving and this app has
+                  really helped me save towards multiple goals, evaluate my
+                  spending habits and has made me all around better at managing
+                  my money. Thank you.&CloseCurlyDoubleQuote;.
                 </p>
 
                 <small class="testimonial__label"> Fadeyi Thompson </small>
@@ -621,10 +649,9 @@
               </div>
               <div class="testimonial__content">
                 <p class="testimonial__text c-normal px-1">
-                  &OpenCurlyDoubleQuote;Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Quis, porro pariatur repudiandae tenetur
-                  maxime quasi reiciendis ipsa asperiores, molestiae cum atque
-                  excepturi est beatae non&CloseCurlyDoubleQuote;.
+                  &OpenCurlyDoubleQuote;Great tool to help manage finances
+                  smarter and even allows you to create a personalized savings
+                  goal to help you save!! Great app!&CloseCurlyDoubleQuote;.
                 </p>
 
                 <small class="testimonial__label"> Fadeyi Thompson </small>
@@ -641,12 +668,12 @@
           <div class="col-sm-12 mx-auto">
             <div class="strip text-center">
               <h1 class="c-bolder text-white strip__title">
-                Download Selcap App Today
+                Download SelVest App Today
               </h1>
               <p class="text-white">
                 Lorem ipsum dolor sit amet consectetur adipis
                 <br class="d-none d-sm-inline-block" />
-                selcapital & get referral bonus
+                SelVest & get referral bonus
               </p>
               <div
                 class="text-center shadow mx-auto d-inline-flex flex-column flex-md-row mt-2"
@@ -748,7 +775,7 @@
                 Close, Parkview Estate, Ikoyi, Lagos
               </li>
               <li>0700 002 2400</li>
-              <li>info@selcapitalpartners.com</li>
+              <li>info@SelVestpartners.com</li>
             </ul>
           </div>
         </div>
