--- a/app/invest.html
+++ b/app/invest.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>SelCapital - Invest</title>
+    <title>SelVest - Invest</title>
 
     <!-- build:css assets/styles/styles.css -->
     <link rel="stylesheet" href="temp/styles/styles.css" />
@@ -75,9 +75,7 @@
           <div
             class="c-header__text-container c-header__text-container--wide order-2 order-md-1 pt-md-5"
           >
-            <h1 class="c-bold c-header__title pb-3">
-              Welcome to Selcapital vest
-            </h1>
+            <h1 class="c-bold c-header__title pb-3">Welcome to SelVest vest</h1>
             <span class="c-normal c-header__text lead">
               We offer investment options that make our world a better place to
               be. That’s why over 20,000 investors trust our products.
@@ -134,7 +132,7 @@
               </span>
 
               <div class="pb-4 pb-md-0">
-                <h5>Selcapital Investment</h5>
+                <h5>SelVest Investment</h5>
                 <p class="pr-sm-2">
                   We offer long/Short term Investment from different sectors
                   aimed at achieving steady capital growth at favourable risk
@@ -292,7 +290,7 @@
               <h2 class="c-title__bigger">Earn referral bonus</h2>
               <p class="pt-3">
                 You can make money aside by inviting freinds, family &amp;
-                contacts to selcapital vest.
+                contacts to SelVest vest.
               </p>
             </div>
           </div>
@@ -366,8 +364,7 @@
                 STORIES
               </div>
               <h2 class="c-title__bigger pb-5 text-center">
-                What our members are<br class="d-none d-sm-block" />
-
+                What our members are <br class="d-none d-sm-block" />
                 saying about us
               </h2>
             </div>
@@ -385,10 +382,9 @@
                 class="testimonial__content text-center text-md-left mt-3 mt-md-0"
               >
                 <p class="testimonial__text c-normal px-1">
-                  &OpenCurlyDoubleQuote;Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Quis, porro pariatur repudiandae tenetur
-                  maxime quasi reiciendis ipsa asperiores, molestiae cum atque
-                  excepturi est beatae non&CloseCurlyDoubleQuote;.
+                  &OpenCurlyDoubleQuote;The options on “savings” that it gives
+                  you, help you save money without you even stressing! The
+                  easiest way to save hands down!&CloseCurlyDoubleQuote;.
                 </p>
 
                 <small class="testimonial__label"> Fadeyi Thompson </small>
@@ -400,14 +396,12 @@
               <div class="testimonial__avatar shadow-sm mr-4">
                 <img src="assets/images/avatar.jpg" alt="" />
               </div>
-              <div
-                class="testimonial__content text-center text-md-left mt-3 mt-md-0"
-              >
+              <div class="testimonial__content">
                 <p class="testimonial__text c-normal px-1">
-                  &OpenCurlyDoubleQuote;Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Quis, porro pariatur repudiandae tenetur
-                  maxime quasi reiciendis ipsa asperiores, molestiae cum atque
-                  excepturi est beatae non&CloseCurlyDoubleQuote;.
+                  &OpenCurlyDoubleQuote;I am so bad at saving and this app has
+                  really helped me save towards multiple goals, evaluate my
+                  spending habits and has made me all around better at managing
+                  my money. Thank you.&CloseCurlyDoubleQuote;.
                 </p>
 
                 <small class="testimonial__label"> Fadeyi Thompson </small>
@@ -419,14 +413,11 @@
               <div class="testimonial__avatar shadow-sm mr-4">
                 <img src="assets/images/avatar.jpg" alt="" />
               </div>
-              <div
-                class="testimonial__content text-center text-md-left mt-3 mt-md-0"
-              >
+              <div class="testimonial__content">
                 <p class="testimonial__text c-normal px-1">
-                  &OpenCurlyDoubleQuote;Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Quis, porro pariatur repudiandae tenetur
-                  maxime quasi reiciendis ipsa asperiores, molestiae cum atque
-                  excepturi est beatae non&CloseCurlyDoubleQuote;.
+                  &OpenCurlyDoubleQuote;Great tool to help manage finances
+                  smarter and even allows you to create a personalized savings
+                  goal to help you save!! Great app!&CloseCurlyDoubleQuote;.
                 </p>
 
                 <small class="testimonial__label"> Fadeyi Thompson </small>
@@ -443,12 +434,12 @@
           <div class="col-sm-12 mx-auto">
             <div class="strip text-center">
               <h1 class="c-bolder text-white strip__title">
-                Download Selcap App Today
+                Download SelVest App Today
               </h1>
               <p class="text-white">
                 Lorem ipsum dolor sit amet consectetur adipis
                 <br class="d-none d-sm-inline-block" />
-                selcapital & get referral bonus
+                SelVest & get referral bonus
               </p>
               <div
                 class="text-center shadow mx-auto d-inline-flex flex-column flex-md-row mt-2"
@@ -545,7 +536,7 @@
                 Close, Parkview Estate, Ikoyi, Lagos
               </li>
               <li>0700 002 2400</li>
-              <li>info@selcapitalpartners.com</li>
+              <li>info@SelVestpartners.com</li>
             </ul>
           </div>
         </div>
