--- a/app/savings.html
+++ b/app/savings.html
@@ -224,8 +224,8 @@
                 Goals you can actually achieve.
               </h2>
               <p class="pb-3">
-                Share what you're saving for on let SelCapital do the rest. It
-                can budget for your next vacation, or put money away for a rainy
+                Share what you're saving for on let SelVest do the rest. It can
+                budget for your next vacation, or put money away for a rainy
                 day.
               </p>
               <div class="d-flex">
@@ -321,12 +321,12 @@
               <h2 class="c-title__bigger">
                 Instant transactions to or
                 <!-- <br class="d-none d-sm-block" /> -->
-                from other SelCapital Members
+                from other SelVest Members
               </h2>
               <p class="pt-3">
                 You can pay friends or family using their phone number or email
                 address. No fees or hidden charges to transfer money to other
-                Selcapital members
+                SelVest members
               </p>
             </div>
           </div>
@@ -394,8 +394,7 @@
                 STORIES
               </div>
               <h2 class="c-title__bigger pb-5 text-center">
-                What our members are<br class="d-none d-sm-block" />
-
+                What our members are <br class="d-none d-sm-block" />
                 saying about us
               </h2>
             </div>
@@ -413,10 +412,9 @@
                 class="testimonial__content text-center text-md-left mt-3 mt-md-0"
               >
                 <p class="testimonial__text c-normal px-1">
-                  &OpenCurlyDoubleQuote;Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Quis, porro pariatur repudiandae tenetur
-                  maxime quasi reiciendis ipsa asperiores, molestiae cum atque
-                  excepturi est beatae non&CloseCurlyDoubleQuote;.
+                  &OpenCurlyDoubleQuote;The options on “savings” that it gives
+                  you, help you save money without you even stressing! The
+                  easiest way to save hands down!&CloseCurlyDoubleQuote;.
                 </p>
 
                 <small class="testimonial__label"> Fadeyi Thompson </small>
@@ -430,10 +428,10 @@
               </div>
               <div class="testimonial__content">
                 <p class="testimonial__text c-normal px-1">
-                  &OpenCurlyDoubleQuote;Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Quis, porro pariatur repudiandae tenetur
-                  maxime quasi reiciendis ipsa asperiores, molestiae cum atque
-                  excepturi est beatae non&CloseCurlyDoubleQuote;.
+                  &OpenCurlyDoubleQuote;I am so bad at saving and this app has
+                  really helped me save towards multiple goals, evaluate my
+                  spending habits and has made me all around better at managing
+                  my money. Thank you.&CloseCurlyDoubleQuote;.
                 </p>
 
                 <small class="testimonial__label"> Fadeyi Thompson </small>
@@ -447,10 +445,9 @@
               </div>
               <div class="testimonial__content">
                 <p class="testimonial__text c-normal px-1">
-                  &OpenCurlyDoubleQuote;Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Quis, porro pariatur repudiandae tenetur
-                  maxime quasi reiciendis ipsa asperiores, molestiae cum atque
-                  excepturi est beatae non&CloseCurlyDoubleQuote;.
+                  &OpenCurlyDoubleQuote;Great tool to help manage finances
+                  smarter and even allows you to create a personalized savings
+                  goal to help you save!! Great app!&CloseCurlyDoubleQuote;.
                 </p>
 
                 <small class="testimonial__label"> Fadeyi Thompson </small>
@@ -467,12 +464,12 @@
           <div class="col-sm-12 mx-auto">
             <div class="strip text-center">
               <h1 class="c-bolder text-white strip__title">
-                Download Selcap App Today
+                Download SelVest App Today
               </h1>
               <p class="text-white">
                 Lorem ipsum dolor sit amet consectetur adipis
                 <br class="d-none d-sm-inline-block" />
-                selcapital & get referral bonus
+                SelVest & get referral bonus
               </p>
               <div
                 class="text-center shadow mx-auto d-inline-flex flex-column flex-md-row mt-2"
@@ -569,7 +566,7 @@
                 Close, Parkview Estate, Ikoyi, Lagos
               </li>
               <li>0700 002 2400</li>
-              <li>info@selcapitalpartners.com</li>
+              <li>info@SelVestpartners.com</li>
             </ul>
           </div>
         </div>
