--- a/app/about.html
+++ b/app/about.html
@@ -35,8 +35,8 @@
               >
               <a href="" class="nav__link nav__link--js ml-5">Save</a>
               <a href="" class="nav__link ml-5">Invest</a>
-              <a href="" class="nav__link ml-5">Blog</a>
-              <a href="" class="nav__link ml-5">FAQ</a>
+              <!-- <a href="" class="nav__link ml-5">Blog</a>
+              <a href="" class="nav__link ml-5">FAQ</a> -->
               <a href="" class="nav__link ml-5">Sign In</a>
               <a
                 href=""
@@ -186,11 +186,10 @@
           <div class="col-md-6 pl-md-5">
             <div class="">
               <h3 class="c-title__bigger pb-md-0">
-                Automating, digitizing secure & transparent savings & investment
-                transactions.
+                Digitizing secure & transparent transactions.
               </h3>
               <p class="pt-3">
-                SEL Capital is a multi faceted financial services company
+                SelVest is a multi faceted financial services company
                 offering tailored financial services and solutions to
                 individuals, companies and the public sector. We provide a
                 diversified range of financial services including Consumer
