--- a/app/invest.html
+++ b/app/invest.html
@@ -32,8 +32,8 @@
 
               <a href="savings.html" class="nav__link ml-5">Save</a>
               <a href="invest.html" class="nav__link ml-5">Invest</a>
-              <a href="" class="nav__link ml-5">Blog</a>
-              <a href="" class="nav__link ml-5">FAQ</a>
+              <!-- <a href="" class="nav__link ml-5">Blog</a> -->
+              <!-- <a href="" class="nav__link ml-5">FAQ</a> -->
               <a href="login.html" class="nav__link ml-5">Sign In</a>
               <a
                 href="signup.html"
@@ -75,7 +75,9 @@
           <div
             class="c-header__text-container c-header__text-container--wide order-2 order-md-1 pt-md-5"
           >
-            <h1 class="c-bold c-header__title pb-3">Welcome to SelVest vest</h1>
+            <h1 class="c-bold c-header__title pb-3">
+              Welcome to SelVest Investify
+            </h1>
             <span class="c-normal c-header__text lead">
               We offer investment options that make our world a better place to
               be. That’s why over 20,000 investors trust our products.
