--- a/app/savings.html
+++ b/app/savings.html
@@ -34,8 +34,8 @@
 
               <a href="savings.html" class="nav__link ml-5">Save</a>
               <a href="invest.html" class="nav__link ml-5">Invest</a>
-              <a href="" class="nav__link ml-5">Blog</a>
-              <a href="" class="nav__link ml-5">FAQ</a>
+              <!-- <a href="" class="nav__link ml-5">Blog</a>
+              <a href="" class="nav__link ml-5">FAQ</a> -->
               <a href="login.html" class="nav__link ml-5">Sign In</a>
               <a
                 href="signup.html"
@@ -81,9 +81,9 @@
               Take control of <br class="d-none d-md-block" />your money
             </h1>
             <span class="c-normal c-header__text lead">
-              4.00% Annual Percentage Yield (APY).¹ Set money aside with
+              14.00% Annual Percentage Yield. Set money aside with
               <br class="d-none d-md-block" />
-              Automatic Savings features. And never pay a fee².
+              Automatic Savings features. And never pay a fee.
             </span>
             <div class="mt-5">
               <a href="" class="mr-1 mr-sm-2"
