--- a/app/index.html
+++ b/app/index.html
@@ -33,8 +33,8 @@
                 >Save</a
               >
               <a href="invest.html" class="nav__link ml-5">Invest</a>
-              <a href="" class="nav__link ml-5">Blog</a>
-              <a href="" class="nav__link ml-5">FAQ</a>
+              <!-- <a href="" class="nav__link ml-5">Blog</a>
+              <a href="" class="nav__link ml-5">FAQ</a> -->
               <a href="login.html" class="nav__link ml-5">Sign In</a>
               <a
                 href="Signup.html"
