--- a/app/login.html
+++ b/app/login.html
@@ -46,8 +46,8 @@
                 >Save</a
               >
               <a href="invet.html" class="nav__link ml-5">Invest</a>
-              <a href="" class="nav__link ml-5">Blog</a>
-              <a href="" class="nav__link ml-5">FAQ</a>
+              <!-- <a href="" class="nav__link ml-5">Blog</a>
+              <a href="" class="nav__link ml-5">FAQ</a> -->
               <a
                 href="signup.html"
                 class="nav__link ml-5 btn btn-sm btn-custom btn-outline-success c-header__btn text-success"
