--- a/app/signup.html
+++ b/app/signup.html
@@ -48,8 +48,8 @@
                 >Save</a
               >
               <a href="invest.html" class="nav__link ml-5">Invest</a>
-              <a href="" class="nav__link ml-5">Blog</a>
-              <a href="" class="nav__link ml-5">FAQ</a>
+              <!-- <a href="" class="nav__link ml-5">Blog</a>
+              <a href="" class="nav__link ml-5">FAQ</a> -->
               <a
                 href="login.html"
                 class="nav__link ml-5 btn btn-sm btn-custom btn-outline-success c-header__btn text-success"
